# Lux

./: .gitignore  LICENSE  Lux.cabal  Lux.exe - Shortcut.lnk  build.cmd  build_web.cmd  run.cmd  stack.yaml
TD/: LambdaDesigner.1.toe  LambdaDesigner.2.toe  LambdaDesigner.3.toe  LambdaDesigner.4.toe  LambdaDesigner.toe
TD/Holme/: fileinfo.txt
TD/scripts/: crop.glsl  scripts.py  server.py  timer_callbacks.py  vhs.glsl
TD/scripts/Lux/: server.py  timer_callbacks.py
TD/scripts/Visuals/: .#crosshatch.frag  json_output.txt
app/: Main.hs
src/: Lux.hs  OSCServer.hs
web/: .#Stylesheet.elm  Admin.elm  Main.elm  SharedStyles.elm  Styles.elm  Stylesheets.elm  admin.html  admin.js  elm-package.json  index.html  index.js  lux.html  lux.js  reactor-admin.html  reactor-index.html  styles.css
