name:                Lux
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/ulyssesp/Lux
license:             BSD3
license-file:        LICENSE
author:              Ulysses Popple
maintainer:          ulysses.popple@gmail.com
copyright:           2017 Ulysses Popple
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
    hs-source-dirs:      src
    exposed-modules:     Lux
    build-depends:       base >= 4.7 && < 5
                       , bytestring >= 0.10
                       , LambdaDesigner
                       , lens >= 4.15
                       , matrix >= 0.3

                        
    default-language:    Haskell2010

executable Lux
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , Lux
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ulyssesp/LambdaDesigner-sample
